# ktvschedule

ktvschedule/: .directory  AUTHORS  ChangeLog  Doxyfile  Makefile.in  README  TODO  configure  configure.in  configure.in.in  ktvschedule%2feventsrc  ktvschedule.kdevelop  ktvschedule.kdevelop.pcs  ktvschedule.kdevelop.spec  ktvschedule.kdevses
ktvschedule/doc/: Makefile.am  Makefile.in
ktvschedule/doc/en/: Makefile.am  Makefile.in  index.docbook
ktvschedule/po/: Makefile.in  de.gmo  de.po  el.gmo  el.po  fr.gmo  fr.po  ktvschedule.pot
ktvschedule/src/: Makefile.am  Makefile.in  channellist.cpp  channellist.h  channelselect_ui.ui  configuration.cpp  configuration.h  detailspreflayout.ui  eventsrc  generalprefslayout.ui  ktvschedule.cpp  ktvschedule.desktop  ktvschedule.h  ktvschedule.lsm  ktvscheduleui.rc  main.cpp  prefsdialog.cpp  prefsdialog.h  scheduleprefslayout.ui  styleprefslayout.ui  systemtray.cpp  systemtray.h  tvgrabprefslayout.cpp  tvgrabprefslayout.h  tvguidetable.cpp  tvguidetable.h  tvscheduler.cpp  tvscheduler.h  xmlparser.cpp  xmlparser.h
ktvschedule/src/pics/: Makefile.am  Makefile.in
